--- a/html/blog-with-sidebar.html
+++ b/html/blog-with-sidebar.html
@@ -14,20 +14,20 @@
     <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/bootsnav.css" rel="stylesheet" />
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../assets/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../assets/css/themify-icons.css" rel="stylesheet" />
+    <link href="../assets/css/flaticon-set.css" rel="stylesheet" />
+    <link href="../assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="../assets/css/owl.carousel.min.css" rel="stylesheet" />
+    <link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="../assets/css/animate.css" rel="stylesheet" />
+    <link href="../assets/css/bootsnav.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="../assets/css/responsive.css" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -76,35 +76,20 @@
                     <ul>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
-                                <i class="fa fa-shopping-basket"></i>
-                                <span class="badge">3</span>
+                                <i class="fa fa-user"></i>
                             </a>
                             <ul class="dropdown-menu cart-list">
+                                
                                 <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Delica omtantur </a></h6>
-                                    <p>2x - <span class="price">$99.99</span></p>
-                                </li>
-                                <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Omnes ocurreret</a></h6>
-                                    <p>1x - <span class="price">$33.33</span></p>
-                                </li>
-                                <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Agam facilisis</a></h6>
-                                    <p>2x - <span class="price">$99.99</span></p>
-                                </li>
-                                <li class="total">
-                                    <span class="pull-right"><strong>Total</strong>: $0.00</span>
-                                    <a href="#" class="btn btn-default btn-cart">Cart</a>
+                                    <li><a href=""><i class="fas fa-user"></i> logout</a></li>
                                 </li>
                             </ul>
                         </li>
-                        <li class="search"><a href="#"><i class="fas fa-search"></i></a></li>
+                        <li class="button"><a href=""><i class="fas fa-user"></i> logout</a></li>                    
                     </ul>
-                </div>        
+                </div>              
                 <!-- End Atribute Navigation -->
+
 
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
@@ -112,7 +97,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="../assets/img/logo.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -120,13 +105,8 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-center" data-in="#" data-out="#">
-                        <li class="dropdown">
+                        <li>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Home</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="index-1.html">Home Version One</a></li>
-                                <li><a href="index-2.html">Home Version Two</a></li>
-                                <li><a href="index-3.html">Home Version Three</a></li>
-                            </ul>
                         </li>
                         <li><a href="about-us.html">About Us</a></li>
                         <li class="dropdown">
@@ -139,17 +119,7 @@
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog-standard.html">Blog Standard</a></li>
-                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>
-                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>
-                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>
-                                <li><a href="blog-single.html">Blog Single</a></li>
-                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="blog-with-sidebar.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -163,7 +133,7 @@
 
     <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark-hard bg-fixed text-light" style="background-image: url(assets/img/banner/9.jpg);">
+    <div class="breadcrumb-area text-center shadow dark-hard bg-fixed text-light" style="background-image: url(../assets/img/banner/9.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -190,7 +160,7 @@
                             <div class="single-item">
                                 <div class="item wow fadeInUp">
                                     <div class="thumb">
-                                        <img src="assets/img/blog/11.jpg" alt="Thumb">
+                                        <img src="../assets/img/blog/11.jpg" alt="Thumb">
                                         <div class="date">January 25, 2021</div>
                                     </div>
                                     <div class="info">
@@ -215,7 +185,7 @@
                             <div class="single-item">
                                 <div class="item wow fadeInUp">
                                     <div class="thumb">
-                                        <img src="assets/img/blog/22.jpg" alt="Thumb">
+                                        <img src="../assets/img/blog/22.jpg" alt="Thumb">
                                         <div class="date">February 16, 2021</div>
                                     </div>
                                     <div class="info">
@@ -240,7 +210,7 @@
                             <div class="single-item">
                                 <div class="item wow fadeInUp">
                                     <div class="thumb">
-                                        <img src="assets/img/blog/33.jpg" alt="Thumb">
+                                        <img src="../assets/img/blog/33.jpg" alt="Thumb">
                                         <div class="date">March 23, 2021</div>
                                     </div>
                                     <div class="info">
@@ -297,7 +267,7 @@
                                     <li>
                                         <div class="thumb">
                                             <a href="#">
-                                                <img src="assets/img/thumbs/1.jpg" alt="Thumb">
+                                                <img src="../assets/img/thumbs/1.jpg" alt="Thumb">
                                             </a>
                                         </div>
                                         <div class="info">
@@ -310,7 +280,7 @@
                                     <li>
                                         <div class="thumb">
                                             <a href="#">
-                                                <img src="assets/img/thumbs/3.jpg" alt="Thumb">
+                                                <img src="../assets/img/thumbs/3.jpg" alt="Thumb">
                                             </a>
                                         </div>
                                         <div class="info">
@@ -323,7 +293,7 @@
                                     <li>
                                         <div class="thumb">
                                             <a href="#">
-                                                <img src="assets/img/thumbs/4.jpg" alt="Thumb">
+                                                <img src="../assets/img/thumbs/4.jpg" alt="Thumb">
                                             </a>
                                         </div>
                                         <div class="info">
@@ -367,32 +337,32 @@
                                     <ul>
                                         <li>
                                             <a href="#">
-                                                <img src="assets/img/thumbs/1.jpg" alt="thumb">
+                                                <img src="../assets/img/thumbs/1.jpg" alt="thumb">
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="assets/img/thumbs/5.jpg" alt="thumb">
+                                                <img src="../assets/img/thumbs/5.jpg" alt="thumb">
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="assets/img/thumbs/6.jpg" alt="thumb">
+                                                <img src="../assets/img/thumbs/6.jpg" alt="thumb">
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="assets/img/thumbs/4.jpg" alt="thumb">
+                                                <img src="../assets/img/thumbs/4.jpg" alt="thumb">
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="assets/img/thumbs/3.jpg" alt="thumb">
+                                                <img src="../assets/img/thumbs/3.jpg" alt="thumb">
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="assets/img/thumbs/2.jpg" alt="thumb">
+                                                <img src="../assets/img/thumbs/2.jpg" alt="thumb">
                                             </a>
                                         </li>
                                     </ul>
@@ -479,7 +449,7 @@
     <footer class="bg-dark text-light">
         <!-- Fixed Shape -->
         <div class="fixed-shape">
-            <img src="assets/img/shape/2.png" alt="Shape">
+            <img src="../assets/img/shape/2.png" alt="Shape">
         </div>
         <!-- Fixed Shape -->
         <div class="container">
@@ -488,7 +458,7 @@
                     <!-- Single Itme -->
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="../assets/img/logo-light.png" alt="Logo">
                             <p>
                                 Happen active county. Winding for the morning am shyness evident to poor. Garrets because elderly new to the point.
                             </p>
@@ -536,7 +506,7 @@
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="assets/img/thumbs/3.jpg" alt="Thumb">
+                                            <img src="../assets/img/thumbs/3.jpg" alt="Thumb">
                                         </a>
                                     </div>
                                     <div class="info">
@@ -549,7 +519,7 @@
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="assets/img/thumbs/5.jpg" alt="Thumb">
+                                            <img src="../assets/img/thumbs/5.jpg" alt="Thumb">
                                         </a>
                                     </div>
                                     <div class="info">
@@ -615,23 +585,23 @@
 
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/jquery.nice-select.min.js"></script>
-    <script src="assets/js/bootsnav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/jquery-1.12.4.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/jquery.appear.js"></script>
+    <script src="../assets/js/jquery.easing.min.js"></script>
+    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/js/modernizr.custom.13711.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/progress-bar.min.js"></script>
+    <script src="../assets/js/isotope.pkgd.min.js"></script>
+    <script src="../assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="../assets/js/count-to.js"></script>
+    <script src="../assets/js/YTPlayer.min.js"></script>
+    <script src="../assets/js/jquery.nice-select.min.js"></script>
+    <script src="../assets/js/bootsnav.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 
