--- a/html/services.html
+++ b/html/services.html
@@ -14,20 +14,20 @@
     <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/bootsnav.css" rel="stylesheet" />
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../assets/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../assets/css/themify-icons.css" rel="stylesheet" />
+    <link href="../assets/css/flaticon-set.css" rel="stylesheet" />
+    <link href="../assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="../assets/css/owl.carousel.min.css" rel="stylesheet" />
+    <link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="../assets/css/animate.css" rel="stylesheet" />
+    <link href="../assets/css/bootsnav.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="../assets/css/responsive.css" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -73,37 +73,20 @@
                     <ul>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
-                                <i class="fa fa-shopping-basket"></i>
-                                <span class="badge">3</span>
+                                <i class="fa fa-user"></i>
                             </a>
                             <ul class="dropdown-menu cart-list">
+                                
                                 <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Delica omtantur </a></h6>
-                                    <p>2x - <span class="price">$99.99</span></p>
-                                </li>
-                                <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Omnes ocurreret</a></h6>
-                                    <p>1x - <span class="price">$33.33</span></p>
-                                </li>
-                                <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Agam facilisis</a></h6>
-                                    <p>2x - <span class="price">$99.99</span></p>
-                                </li>
-                                <li class="total">
-                                    <span class="pull-right"><strong>Total</strong>: $0.00</span>
-                                    <a href="#" class="btn btn-default btn-cart">Cart</a>
+                                    <li><a href=""><i class="fas fa-user"></i> logout</a></li>
                                 </li>
                             </ul>
                         </li>
-                        <li class="search"><a href="#"><i class="fas fa-search"></i></a></li>
-                        <li class="button"><a href="#"><i class="fas fa-user"></i> logout</a></li>
-
+                        <li class="button"><a href=""><i class="fas fa-user"></i> logout</a></li>                    
                     </ul>
-                </div>        
+                </div>               
                 <!-- End Atribute Navigation -->
+
 
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
@@ -111,7 +94,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="../assets/img/logo.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -133,17 +116,7 @@
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog-standard.html">Blog Standard</a></li>
-                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>
-                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>
-                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>
-                                <li><a href="blog-single.html">Blog Single</a></li>
-                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="blog-with-sidebar.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -157,7 +130,7 @@
 
     <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark bg-fixed text-light" style="background-image: url(assets/img/banner/4.jpg);">
+    <div class="breadcrumb-area text-center shadow dark bg-fixed text-light" style="background-image: url(../assets/img/banner/4.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -182,7 +155,7 @@
                     <div class="col-lg-3 col-md-6 single-item">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/thumb/8.png" alt="Thumb">
+                                <img src="../assets/img/thumb/8.png" alt="Thumb">
                             </div>
                             <h5>harvest machines</h5>
                             <p>
@@ -196,7 +169,7 @@
                     <div class="col-lg-3 col-md-6 single-item">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/thumb/11.png" alt="Thumb">
+                                <img src="../assets/img/thumb/11.png" alt="Thumb">
                             </div>
                             <h5>warehouses</h5>
                             <p>
@@ -210,7 +183,7 @@
                     <div class="col-lg-3 col-md-6 single-item">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/thumb/12.png" alt="Thumb">
+                                <img src="../assets/img/thumb/12.png" alt="Thumb">
                             </div>
                             <h5>Weather info</h5>
                             <p>
@@ -218,7 +191,7 @@
                                  Access real-time weather data for informed and timely actions."
 
                             </p>
-                            <a href="assets2/index.html"><i class="fas fa-angle-right"></i></a>
+                            <a href="../assets2/index.html"><i class="fas fa-angle-right"></i></a>
                         </div>
                     </div>
                     <!-- End Single Item -->
@@ -226,7 +199,7 @@
                     <div class="col-lg-3 col-md-6 single-item">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/thumb/13.png" alt="Thumb">
+                                <img src="../assets/img/thumb/13.png" alt="Thumb">
                             </div>
                             <h5>postharvest</h5>
                             <p>
@@ -286,13 +259,13 @@
                                 <!-- Carousel Indicators -->
                                 <ol class="carousel-indicators">
                                     <li data-target="#testimonial-carousel" data-slide-to="0" class="active">
-                                        <img src="assets/img/team/1.jpg" alt="Thumb">
+                                        <img src="../assets/img/team/images (8).jpeg" alt="Thumb">
                                     </li>
                                     <li data-target="#testimonial-carousel" data-slide-to="1">
-                                        <img src="assets/img/team/2.jpg" alt="Thumb">
+                                        <img src="../assets/img/team/images (7).jpeg" alt="Thumb">
                                     </li>
                                     <li data-target="#testimonial-carousel" data-slide-to="2">
-                                        <img src="assets/img/team/3.jpg" alt="Thumb">
+                                        <img src="../assets/img/team/3.jpg" alt="Thumb">
                                     </li>
                                 </ol>
                             </div>
@@ -310,7 +283,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 thumb">
-                    <img src="assets/img/about/3.jpg" alt="Thumb">
+                    <img src="../assets/img/team/images (10).jpeg" alt="Thumb">
                 </div>
                 <div class="col-lg-6 info">
                     <h5>Why Choose Us</h5>
@@ -357,7 +330,7 @@
     <div class="fun-factor-area default-padding-bottom">
         <!-- Illustration -->
         <div class="illustration wow fadeInDown">
-            <img src="assets/img/thumb/5.png" alt="Illustration">
+            <img src="../assets/img/thumb/5.png" alt="Illustration">
         </div>
         <!-- End Illustration -->
         <div class="container">
@@ -399,7 +372,7 @@
     <div class="gallery-area bg-gray default-padding">
         <!-- Shape -->
         <div class="fixed-shape">
-            <img src="assets/img/shape/5.png" alt="Shape">
+            <img src="../assets/img/shape/5.png" alt="Shape">
         </div>
         <!-- Shape -->
         <div class="container">
@@ -420,8 +393,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/gallery/1.jpg" alt="Thumb">
-                                    <a href="assets/img/gallery/1.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/gallery/1.jpg" alt="Thumb">
+                                    <a href="../assets/img/gallery/1.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -436,8 +409,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/gallery/17.jpg" alt="Thumb">
-                                    <a href="assets/img/gallery/17.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/gallery/17.jpg" alt="Thumb">
+                                    <a href="../assets/img/gallery/17.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -452,8 +425,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/gallery/16.jpg" alt="Thumb">
-                                    <a href="assets/img/gallery/16.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/gallery/16.jpg" alt="Thumb">
+                                    <a href="../assets/img/gallery/16.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -468,8 +441,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/gallery/12.jpg" alt="Thumb">
-                                    <a href="assets/img/gallery/12.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/gallery/12.jpg" alt="Thumb">
+                                    <a href="../assets/img/gallery/12.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -492,7 +465,7 @@
     <footer class="bg-dark text-light">
         <!-- Fixed Shape -->
         <div class="fixed-shape">
-            <img src="assets/img/shape/2.png" alt="Shape">
+            <img src="../assets/img/shape/2.png" alt="Shape">
         </div>
         <!-- Fixed Shape -->
         <div class="container">
@@ -501,7 +474,7 @@
                     <!-- Single Itme -->
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="../assets/img/logo-light.png" alt="Logo">
                             <p>
                                 Happen active county. Winding for the morning am shyness evident to poor. Garrets because elderly new to the point.
                             </p>
@@ -549,7 +522,7 @@
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="assets/img/thumbs/3.jpg" alt="Thumb">
+                                            <img src="../assets/img/thumbs/3.jpg" alt="Thumb">
                                         </a>
                                     </div>
                                     <div class="info">
@@ -562,7 +535,7 @@
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="assets/img/thumbs/5.jpg" alt="Thumb">
+                                            <img src="../assets/img/thumbs/5.jpg" alt="Thumb">
                                         </a>
                                     </div>
                                     <div class="info">
@@ -627,23 +600,23 @@
 
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/jquery.nice-select.min.js"></script>
-    <script src="assets/js/bootsnav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/jquery-1.12.4.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/jquery.appear.js"></script>
+    <script src="../assets/js/jquery.easing.min.js"></script>
+    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/js/modernizr.custom.13711.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/progress-bar.min.js"></script>
+    <script src="../assets/js/isotope.pkgd.min.js"></script>
+    <script src="../assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="../assets/js/count-to.js"></script>
+    <script src="../assets/js/YTPlayer.min.js"></script>
+    <script src="../assets/js/jquery.nice-select.min.js"></script>
+    <script src="../assets/js/bootsnav.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 
