--- a/html/about-us.html
+++ b/html/about-us.html
@@ -14,20 +14,20 @@
     <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/bootsnav.css" rel="stylesheet" />
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../assets/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../assets/css/themify-icons.css" rel="stylesheet" />
+    <link href="../assets/css/flaticon-set.css" rel="stylesheet" />
+    <link href="../assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="../assets/css/owl.carousel.min.css" rel="stylesheet" />
+    <link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="../assets/css/animate.css" rel="stylesheet" />
+    <link href="../assets/css/bootsnav.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="../assets/css/responsive.css" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -76,37 +76,20 @@
                     <ul>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
-                                <i class="fa fa-shopping-basket"></i>
-                                <span class="badge">3</span>
+                                <i class="fa fa-user"></i>
                             </a>
                             <ul class="dropdown-menu cart-list">
+                                
                                 <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Delica omtantur </a></h6>
-                                    <p>2x - <span class="price">$99.99</span></p>
-                                </li>
-                                <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Omnes ocurreret</a></h6>
-                                    <p>1x - <span class="price">$33.33</span></p>
-                                </li>
-                                <li>
-                                    <a href="#" class="photo"><img src="assets/img/100x100.png" class="cart-thumb" alt="" /></a>
-                                    <h6><a href="#">Agam facilisis</a></h6>
-                                    <p>2x - <span class="price">$99.99</span></p>
-                                </li>
-                                <li class="total">
-                                    <span class="pull-right"><strong>Total</strong>: $0.00</span>
-                                    <a href="#" class="btn btn-default btn-cart">Cart</a>
+                                    <li><a href=""><i class="fas fa-user"></i> logout</a></li>
                                 </li>
                             </ul>
                         </li>
-                        <li class="search"><a href="#"><i class="fas fa-search"></i></a></li>
-                        <li class="button"><a href="#"><i class="fas fa-user"></i> logout</a></li>
-
+                        <li class="button"><a href=""><i class="fas fa-user"></i> logout</a></li>                    
                     </ul>
-                </div>        
+                </div>               
                 <!-- End Atribute Navigation -->
+
 
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
@@ -114,7 +97,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="../assets/img/logo.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -136,17 +119,7 @@
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog-standard.html">Blog Standard</a></li>
-                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>
-                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>
-                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>
-                                <li><a href="blog-single.html">Blog Single</a></li>
-                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="blog-with-sidebar.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -160,7 +133,7 @@
 
     <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark bg-fixed text-light" style="background-image: url(assets/img/banner/8.jpg);">
+    <div class="breadcrumb-area text-center shadow dark bg-fixed text-light" style="background-image: url(../assets/img/banner/8.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -180,7 +153,7 @@
     <div class="about-content-area overflow-hidden inc-shape default-padding">
         <!-- Illustration -->
         <div class="illustration">
-            <img src="assets/img/shape/4.png" alt="Illustration">
+            <img src="../assets/img/shape/4.png" alt="Illustration">
         </div>
         <!-- Illustration -->
         <div class="container">
@@ -218,8 +191,8 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="thumb">
-                        <img class="wow fadeInRight" data-wow-delay="700ms" src="assets/img/about/1.jpg" alt="Thumb">
-                        <img class="wow fadeInUp" data-wow-delay="1000ms" src="assets/img/about/4.jpg" alt="Thumb">
+                        <img class="wow fadeInRight" data-wow-delay="700ms" src="../assets/img/newpic/new/images (7).jpeg" alt="Thumb">
+                        <img class="wow fadeInUp" data-wow-delay="1000ms" src="../assets/img/newpic/new/images (8).jpeg" alt="Thumb">
                     </div>
                 </div>
 
@@ -236,7 +209,7 @@
                 <div class="row align-center">
 
                     <div class="col-lg-4 thumb wow fadeInUp" data-wow-delay="550ms">
-                        <img src="assets/img/illustration/p.png" alt="Thumb">
+                        <img src="../assets/img/illustration/p.png" alt="Thumb">
                     </div>
 
                     <div class="col-lg-7 offset-lg-1 wow fadeInRight">
@@ -308,7 +281,7 @@
     ============================================= -->
     <div class="history-area default-padding text-center bg-dark text-light">
         <!-- Shape -->
-        <div class="fixed-shape-center" style="background-image: url(assets/img/shape/12.png);"></div>
+        <div class="fixed-shape-center" style="background-image: url(../assets/img/shape/12.png);"></div>
         <!-- End Shape -->
         <div class="container">
             <div class="row">
@@ -417,7 +390,7 @@
         </div>
         <!-- Fixed Shape -->
         <div class="fixed-shape">
-            <img src="assets/img/shape/brush-up.png" alt="Shape">
+            <img src="../assets/img/shape/brush-up.png" alt="Shape">
         </div>
         <!-- End Fixed Shape -->
     </div>
@@ -431,12 +404,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="partner-carousel owl-carousel owl-theme">
-                            <img src="assets/img/clients/1.png" alt="Partner">
-                            <img src="assets/img/clients/2.png" alt="Partner">
-                            <img src="assets/img/clients/3.png" alt="Partner">
-                            <img src="assets/img/clients/4.png" alt="Partner">
-                            <img src="assets/img/clients/5.png" alt="Partner">
-                            <img src="assets/img/clients/6.png" alt="Partner">
+                            <img src="../assets/img/clients/1.png" alt="Partner">
+                            <img src="../assets/img/clients/2.png" alt="Partner">
+                            <img src="../assets/img/clients/3.png" alt="Partner">
+                            <img src="../assets/img/clients/4.png" alt="Partner">
+                            <img src="../assets/img/clients/5.png" alt="Partner">
+                            <img src="../assets/img/clients/6.png" alt="Partner">
                         </div>
                     </div>
                 </div>
@@ -450,7 +423,7 @@
     <div class="gallery-area default-padding">
         <!-- Shape -->
         <div class="fixed-shape">
-            <img src="assets/img/shape/5.png" alt="Shape">
+            <img src="../assets/img/shape/5.png" alt="Shape">
         </div>
         <!-- Shape -->
         <div class="container">
@@ -471,8 +444,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/gallery/2.jpg" alt="Thumb">
-                                    <a href="assets/img/gallery/2.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/gallery/2.jpg" alt="Thumb">
+                                    <a href="../assets/img/gallery/2.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -487,8 +460,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/blog/7.jpg" alt="Thumb">
-                                    <a href="assets/img/blog/7.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/blog/7.jpg" alt="Thumb">
+                                    <a href="../assets/img/blog/7.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -503,8 +476,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/blog/10.jpeg" alt="Thumb">
-                                    <a href="assets/img/blog/10.jpeg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/blog/10.jpeg" alt="Thumb">
+                                    <a href="../assets/img/blog/10.jpeg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -519,8 +492,8 @@
                         <div class="pf-item">
                             <div class="item">
                                 <div class="thumb">
-                                    <img src="assets/img/gallery/10.jpg" alt="Thumb">
-                                    <a href="assets/img/gallery/10.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
+                                    <img src="../assets/img/gallery/10.jpg" alt="Thumb">
+                                    <a href="../assets/img/gallery/10.jpg" class="item popup-gallery"><i class="fa fa-plus"></i></a>
                                 </div>
                                 <div class="info">
                                     <h4>
@@ -543,7 +516,7 @@
     <footer class="bg-dark text-light">
         <!-- Fixed Shape -->
         <div class="fixed-shape">
-            <img src="assets/img/shape/2.png" alt="Shape">
+            <img src="../assets/img/shape/2.png" alt="Shape">
         </div>
         <!-- Fixed Shape -->
         <div class="container">
@@ -552,7 +525,7 @@
                     <!-- Single Itme -->
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="../assets/img/logo-light.png" alt="Logo">
                             <p>
                                 Happen active county. Winding for the morning am shyness evident to poor. Garrets because elderly new to the point.
                             </p>
@@ -600,7 +573,7 @@
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="assets/img/thumbs/3.jpg" alt="Thumb">
+                                            <img src="../assets/img/thumbs/3.jpg" alt="Thumb">
                                         </a>
                                     </div>
                                     <div class="info">
@@ -613,7 +586,7 @@
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="assets/img/thumbs/5.jpg" alt="Thumb">
+                                            <img src="../assets/img/thumbs/5.jpg" alt="Thumb">
                                         </a>
                                     </div>
                                     <div class="info">
@@ -679,23 +652,23 @@
 
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/jquery.nice-select.min.js"></script>
-    <script src="assets/js/bootsnav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/jquery-1.12.4.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/jquery.appear.js"></script>
+    <script src="../assets/js/jquery.easing.min.js"></script>
+    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/js/modernizr.custom.13711.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/progress-bar.min.js"></script>
+    <script src="../assets/js/isotope.pkgd.min.js"></script>
+    <script src="../assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="../assets/js/count-to.js"></script>
+    <script src="../assets/js/YTPlayer.min.js"></script>
+    <script src="../assets/js/jquery.nice-select.min.js"></script>
+    <script src="../assets/js/bootsnav.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 
